--- a/index.html
+++ b/index.html
@@ -12,11 +12,30 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
- 
+  <main class="card container">
+    <a href="#/equilibrium">
+      <div class="card__image-content">
+          <img class="card__image" src="./images/image-equilibrium.jpg" alt="Image equilibrium blockchain">
+      </div>
+    </a>
 
-  <footer class="attribution container">
+    <div class="card__content">
+      <a href="#/equilibrium"><h1 class="card__title">Equilibrium #3429</h1></a>
+      <p class="card__description">Our Equilibrium collection promotes balance and calm.</p>
+      <div class="card__meta">
+        <p class="card__meta-coin"><img src="./images/icon-ethereum.svg" alt="Icon ethereum"> 0.041 ETH</p>
+        <p class="card__meta-date"><img src="./images/icon-clock.svg" alt="Icon clock"> 3 days left</p>
+      </div>
+      <div class="card__autor">
+        <img class="card__autor-avatar" src="./images/image-avatar.png" alt="Image autor of the NFT">
+        <p class="card__autor-creator">Creation of <a href="#/jules-wyvern" class="card__autor-creator--name">Jules Wyvern</a></p>
+      </div>
+    </div>
+  </main>
+
+  <footer class="attribution">
     <p class="attribution__text">Challenge by <a class="attribution__link" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
-    <p class="attribution__text">Coded by <a class="attribution__link" href="https://www.frontendmentor.io/profile/victorivanlopezlearning" target="_blank">Víctor Iván López</a>.</p>
+    <p class="attribution__text">Coded by <a class="attribution__link" href="https://github.com/victorivanlopez" target="_blank">Víctor Iván López</a>.</p>
   </footer>
 </body>
 </html>
